# image_processor

./: CMakeLists.txt  README.md  cli_parser.cpp  cli_parser.h  image.cpp  image.h  image_processor.cpp  pixel.cpp  pixel.h  pixel_array.cpp  pixel_array.h  utils.cpp  utils.h
filters/: blur_filter.cpp  blur_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.cpp  filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  sharp_filter.cpp  sharp_filter.h
